<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@drawable/back_gradient"
    >
    tools:ignore="LabelFor"


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/main_email"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_person_outline_white_24dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="5dp"

            android:textColor="@color/colorInput"
            android:textColorHint="@color/hint"
            android:textSize="22sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/password_Sign_in"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textbox_back"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="@color/colorInput"
            android:textColorHint="@color/hint"
            android:textSize="22sp" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton_back"
            android:gravity="center"
            android:onClick="logIn"
            android:text="@string/login"
            android:textColor="@color/colorInput"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:onClick="noAccount"
            android:text="@string/no_account_create_one"
            android:textSize="15sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>